@@ -38,25 +38,21 @@ If you have been previously using jEdit 3.2, you should check out
 <td><b>To create a new file...</b></td>
 <td>select <b>File</b>&gt;<b>New</b>.</td>
 </tr>
-
 <tr>
 <td><img src="jeditresource:/org/gjt/sp/jedit/icons/Open24.gif" width="24" height="24"></td>
 <td><b>To edit an existing file...</b></td>
 <td>select <b>File</b>&gt;<b>Open</b>.</td>
 </tr>
-
 <tr>
 <td><img src="jeditresource:/org/gjt/sp/jedit/icons/Preferences24.gif" width="24" height="24"></td>
 <td><b>To customize jEdit...</b></td>
 <td>select <b>Utilities</b>&gt;<b>Global Options</b>.</td>
 </tr>
-
 <tr>
 <td><img src="jeditresource:/org/gjt/sp/jedit/icons/BeanAdd24.gif" width="24" height="24"></td>
 <td><b>To install plugins...</b></td>
 <td>select <b>Plugins</b>&gt;<b>Plugin Manager</b>.</td>
 </tr>
-
 <tr>
 <td><img src="jeditresource:/org/gjt/sp/jedit/icons/Help24.gif" width="24" height="24"></td>
 <td><b>To show this window...</b></td>
